add image but can't show

--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pichaya</title>
 </head>
 <body>
     <h1>
-        hello I'm Ice
+        Hello
     </h1>
+    <h2>
+        My name is Ice. <br>
+        I'm a student from Kasetsart University. <br>
+        I'm friendly and kind. <br>
+        I prefer to spend my time cooking and eating at <br>
+        home rather than eating at restaurant.
+    </h2>
+    <p>
+        -----this food that I maked-----
+        
+    </p>
+    <img src="/Users/pichayawongchana/Documents/web/pichayaw/IMG_2878.heic">
+
+    <h3>
+        members in my group
+    </h3>
+    <a href="https://nirattasai.github.io/">BAS <br></a>
+    <a href="https://github.com/spwstop/spwstop.github.io">STOP <br></a>
+    <a href="https://github.com/Yukinene/Yukinene.github.io">PUMIN</a>
+    
 </body>
 </html>
