image can be opened

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         -----this food that I maked-----
         
     </p>
-    <img src="/Users/pichayawongchana/Documents/web/pichayaw/IMG_2878.heic">
-
+    <img src="IMG_0869.jpg" width="300" height="400">
+    <img src="IMG_1454.jpg" width="300" height="400">
+    <img src="IMG_2878.jpg" width="300" height="400">
     <h3>
         members in my group
     </h3>
