--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         -----this food that I maked-----
         
     </p>
-    <img src="IMG_0869.jpg" width="300" height="400">
-    <img src="IMG_1454.jpg" width="300" height="400">
-    <img src="IMG_2878.jpg" width="300" height="400">
+    <img src="IMG_0869.jpg">
+    <img src="IMG_1454.jpg">
+    <img src="IMG_2878.jpg">
     <h3>
         members in my group
     </h3>
